# lzs-compression

./: .gitignore  LICENSE.txt
c/: .cproject  .project  README.md  compression.c  configure.ac
c/SourceCode/: compression.c  compression.h  lzs-compression.c  lzs-decompression.c  lzs-decompression.h  lzs.h
c/UnitTest/: lzs-compress.c  lzs-decompress.c  test-lzs-decompression.c  test.c
c/src/: Makefile.am
c/src/liblzs/: Makefile.am  liblzs.pc.in  lzs-common.h  lzs-compression-simple.c  lzs-compression.c  lzs-decompression.c  lzs.h
c/src/test/: Makefile.am  test-incremental.c  test-lzs-decompression.c  test-lzs.c  test-lzs.sh
c/src/utils/: Makefile.am  lzs-compress.c  lzs-decompress.c
python/: .project  compression.py  lzs-compress.py  lzs-decompress.py  lzs-test.py  lzs.py
